--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "parcel": "^2.0.0-rc.0"
   },
   "dependencies": {
+    "core-js": "^3.22.0",
+    "regenerator-runtime": "^0.13.9",
     "sass": "^1.26.10"
   }
 }
